samples/_failures_safe/1761513623_0400f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86c9c787.c: In function ‘tokenize’:
./samples/SAFE/__tmp_86c9c787.c:166:9: error: expected expression at end of input
  166 |         if (!
      |         ^~
./samples/SAFE/__tmp_86c9c787.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86c9c787.c:166:9: error: expected declaration or statement at end of input
